--- a/mlkit/app/src/main/res/layout/home_page.xml
+++ b/mlkit/app/src/main/res/layout/home_page.xml
@@ -21,7 +21,7 @@
         android:layout_height="240dp"
         android:layout_centerVertical="true"
         android:layout_marginTop="7dp"
-        android:src="@drawable/ic_top"
+        android:src="@drawable/home_top_background"
         app:layout_constrainedHeight="true"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -36,7 +36,7 @@
         android:layout_width="80dp"
         android:layout_height="45dp"
         android:layout_marginTop="15dp"
-        android:src="@drawable/foodology_removebg_preview__1_"
+        android:src="@drawable/logo_foodology"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -51,7 +51,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="12dp"
-        android:background="@drawable/btn_see_all"
+        android:background="@drawable/home_btn_see_all"
         android:src="@drawable/profile_pic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/home_background"
@@ -99,7 +99,7 @@
         android:layout_width="350dp"
         android:layout_height="68dp"
         android:layout_marginTop="200dp"
-        android:background="@drawable/ic_search_rectangle"
+        android:background="@drawable/home_search_rectangle"
         android:elevation="100dp"
         android:fontFamily="@font/roboto_regular"
         android:gravity="center"
@@ -135,7 +135,7 @@
         android:layout_width="100dp"
         android:layout_height="20dp"
         android:layout_marginStart="90dp"
-        android:background="@drawable/btn_see_all"
+        android:background="@drawable/home_btn_see_all"
         android:fontFamily="@font/roboto_regular"
         android:text="@string/See_All"
         android:textColor="@android:color/holo_orange_dark"
@@ -151,7 +151,7 @@
         android:layout_height="80dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="30dp"
-        android:background="@drawable/eggicon"
+        android:background="@drawable/home_eggicon"
         android:scrollbarAlwaysDrawHorizontalTrack="true"
         app:layout_constraintBottom_toTopOf="@+id/home_text_lunch"
         app:layout_constraintStart_toStartOf="@id/home_text_fridge"
@@ -164,7 +164,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="20dp"
-        android:background="@drawable/watermelonicon"
+        android:background="@drawable/home_watermelonicon"
         android:scrollbarAlwaysDrawHorizontalTrack="true"
         app:layout_constraintBottom_toBottomOf="@+id/home_egg"
         app:layout_constraintStart_toEndOf="@+id/home_egg"
@@ -176,7 +176,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="20dp"
-        android:background="@drawable/springonionicon"
+        android:background="@drawable/home_springonionicon"
         android:scrollbarAlwaysDrawHorizontalTrack="true"
         app:layout_constraintBottom_toBottomOf="@+id/home_watermelon"
         app:layout_constraintStart_toEndOf="@+id/home_watermelon"
@@ -188,7 +188,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="20dp"
-        android:background="@drawable/mushroomicon"
+        android:background="@drawable/home_mushroomicon"
         android:scrollbarAlwaysDrawHorizontalTrack="true"
         app:layout_constraintBottom_toBottomOf="@+id/home_springonion"
         app:layout_constraintStart_toEndOf="@+id/home_springonion"
@@ -213,7 +213,7 @@
         android:id="@+id/home_see_all_2_button"
         android:layout_width="100dp"
         android:layout_height="20dp"
-        android:background="@drawable/btn_see_all"
+        android:background="@drawable/home_btn_see_all"
         android:fontFamily="@font/roboto_regular"
         android:text="@string/See_All"
         android:textColor="@android:color/holo_orange_dark"
@@ -230,7 +230,7 @@
         android:layout_height="185dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/ic_recipe_box_new"
+        android:background="@drawable/home_recipe_box_new"
         android:scrollbarAlwaysDrawHorizontalTrack="false"
         app:layout_constraintBottom_toBottomOf="@id/bottom_base"
         app:layout_constraintStart_toStartOf="@+id/home_text_lunch"
@@ -244,7 +244,7 @@
         android:layout_height="185dp"
         android:layout_marginStart="20dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/ic_recipe_box_new"
+        android:background="@drawable/home_recipe_box_new"
         android:scrollbarAlwaysDrawHorizontalTrack="false"
         app:layout_constraintBottom_toBottomOf="@+id/home_recipe_box_1"
         app:layout_constraintStart_toEndOf="@+id/home_recipe_box_1"
@@ -258,7 +258,7 @@
         android:layout_height="185dp"
         android:layout_marginStart="20dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/ic_recipe_box_new"
+        android:background="@drawable/home_recipe_box_new"
         android:scrollbarAlwaysDrawHorizontalTrack="false"
         app:layout_constraintBottom_toBottomOf="@+id/home_recipe_box_2"
         app:layout_constraintStart_toEndOf="@+id/home_recipe_box_2"
@@ -273,7 +273,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/ic_friedrice"
+        android:background="@drawable/home_friedrice_content"
         app:layout_constraintBottom_toTopOf="@id/bottom_base"
         app:layout_constraintEnd_toEndOf="@id/home_recipe_box_1"
         app:layout_constraintStart_toStartOf="@id/home_recipe_box_1"
@@ -287,8 +287,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/btn_see_all"
-        android:src="@drawable/friedrice"
+        android:background="@drawable/home_btn_see_all"
+        android:src="@drawable/home_friedrice_image"
         app:layout_constraintEnd_toEndOf="@id/home_recipe_box_1"
         app:layout_constraintStart_toStartOf="@id/home_recipe_box_1"
         app:layout_constraintTop_toTopOf="@id/home_recipe_box_1" />
@@ -301,7 +301,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="32dp"
-        android:background="@drawable/ic_friedrice"
+        android:background="@drawable/home_friedrice_content"
         app:layout_constraintBottom_toTopOf="@id/bottom_base"
         app:layout_constraintEnd_toEndOf="@id/home_recipe_box_2"
         app:layout_constraintStart_toStartOf="@id/home_recipe_box_2"
@@ -315,8 +315,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/btn_see_all"
-        android:src="@drawable/friedrice"
+        android:background="@drawable/home_btn_see_all"
+        android:src="@drawable/home_friedrice_image"
         app:layout_constraintEnd_toEndOf="@id/home_recipe_box_2"
         app:layout_constraintStart_toStartOf="@id/home_recipe_box_2"
         app:layout_constraintTop_toTopOf="@id/home_recipe_box_2" />
@@ -329,7 +329,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/ic_friedrice"
+        android:background="@drawable/home_friedrice_content"
         app:layout_constraintBottom_toTopOf="@id/bottom_base"
         app:layout_constraintEnd_toEndOf="@id/home_recipe_box_3"
         app:layout_constraintStart_toStartOf="@id/home_recipe_box_3"
@@ -343,8 +343,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/btn_see_all"
-        android:src="@drawable/friedrice"
+        android:background="@drawable/home_btn_see_all"
+        android:src="@drawable/home_friedrice_image"
         app:layout_constraintEnd_toEndOf="@id/home_recipe_box_3"
         app:layout_constraintStart_toStartOf="@id/home_recipe_box_3"
         app:layout_constraintTop_toTopOf="@id/home_recipe_box_3" />
@@ -356,7 +356,7 @@
         android:layout_height="85dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_dock_base"
+        android:src="@drawable/dock_base"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -369,7 +369,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/ic_scan_icon"
+        android:background="@drawable/dock_scan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -383,7 +383,7 @@
         android:layout_height="35dp"
         android:layout_marginRight="45dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/ic_dock_home"
+        android:background="@drawable/dock_home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@id/profile_button" />
 
@@ -394,7 +394,7 @@
         android:layout_height="25dp"
         android:layout_marginRight="45dp"
         android:layout_marginBottom="15dp"
-        android:background="@drawable/ic_dock_profile"
+        android:background="@drawable/dock_profile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@id/scan_button" />
 
@@ -405,7 +405,7 @@
         android:layout_height="28dp"
         android:layout_marginLeft="45dp"
         android:layout_marginBottom="13dp"
-        android:background="@drawable/ic_dock_forum"
+        android:background="@drawable/dock_forum"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/scan_button" />
 
@@ -416,7 +416,7 @@
         android:layout_height="26dp"
         android:layout_marginLeft="45dp"
         android:layout_marginBottom="13dp"
-        android:background="@drawable/ic_dock_add_recipe"
+        android:background="@drawable/dock_add_recipe"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/forum_button" />
 
