--- a/mlkit/app/src/main/res/layout/fragment_lams.xml
+++ b/mlkit/app/src/main/res/layout/fragment_lams.xml
@@ -29,7 +29,7 @@
         android:layout_centerVertical="true"
         android:layout_marginBottom="20dp"
         android:rotation="13"
-        android:src="@drawable/foodology_removebg_preview__1_"
+        android:src="@drawable/logo_foodology"
         app:layout_constraintBottom_toBottomOf="@id/ellipseOrange"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
@@ -172,7 +172,7 @@
         android:layout_height="85dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_dock_base"
+        android:src="@drawable/dock_base"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -288,7 +288,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/ic_scan_icon"
+        android:background="@drawable/dock_scan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -302,7 +302,7 @@
         android:layout_height="35dp"
         android:layout_marginRight="45dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/ic_dock_home"
+        android:background="@drawable/dock_home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@id/profile_button" />
 
@@ -313,7 +313,7 @@
         android:layout_height="25dp"
         android:layout_marginRight="45dp"
         android:layout_marginBottom="15dp"
-        android:background="@drawable/ic_dock_profile"
+        android:background="@drawable/dock_profile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@id/scan_button" />
 
@@ -324,7 +324,7 @@
         android:layout_height="28dp"
         android:layout_marginLeft="45dp"
         android:layout_marginBottom="13dp"
-        android:background="@drawable/ic_dock_forum"
+        android:background="@drawable/dock_forum"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/scan_button" />
 
@@ -335,7 +335,7 @@
         android:layout_height="26dp"
         android:layout_marginLeft="45dp"
         android:layout_marginBottom="13dp"
-        android:background="@drawable/ic_dock_add_recipe"
+        android:background="@drawable/dock_add_recipe"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/forum_button" />
 
