--- a/mlkit/app/src/main/res/layout/fragment_profile.xml
+++ b/mlkit/app/src/main/res/layout/fragment_profile.xml
@@ -272,7 +272,7 @@
         android:layout_height="85dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_dock_base"
+        android:src="@drawable/dock_base"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -285,7 +285,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/ic_scan_icon"
+        android:background="@drawable/dock_scan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -299,7 +299,7 @@
         android:layout_height="35dp"
         android:layout_marginRight="45dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/ic_dock_home"
+        android:background="@drawable/dock_home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@id/profile_button" />
 
@@ -310,7 +310,7 @@
         android:layout_height="25dp"
         android:layout_marginRight="45dp"
         android:layout_marginBottom="15dp"
-        android:background="@drawable/ic_dock_profile"
+        android:background="@drawable/dock_profile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@id/scan_button" />
 
@@ -321,7 +321,7 @@
         android:layout_height="28dp"
         android:layout_marginLeft="45dp"
         android:layout_marginBottom="13dp"
-        android:background="@drawable/ic_dock_forum"
+        android:background="@drawable/dock_forum"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/scan_button" />
 
@@ -332,7 +332,7 @@
         android:layout_height="26dp"
         android:layout_marginLeft="45dp"
         android:layout_marginBottom="13dp"
-        android:background="@drawable/ic_dock_add_recipe"
+        android:background="@drawable/dock_add_recipe"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/forum_button" />
 
