--- a/mlkit/app/src/main/res/layout/activity_main.xml
+++ b/mlkit/app/src/main/res/layout/activity_main.xml
@@ -194,7 +194,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/profilePhone"
-        android:background="@drawable/btn_custom"
+        android:background="@drawable/login_btn_darkblue"
         android:layout_marginLeft="70dp"
         android:layout_marginRight="70dp"
         android:layout_marginTop="45dp"
