--- a/mlkit/app/src/main/res/layout/fragment_hardcode_recipe.xml
+++ b/mlkit/app/src/main/res/layout/fragment_hardcode_recipe.xml
@@ -68,7 +68,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        android:id="@+id/logo"
+        android:id="@+id/foodology_logo"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_marginStart="0dp"
