--- a/mlkit/app/src/main/res/layout/fragment_login.xml
+++ b/mlkit/app/src/main/res/layout/fragment_login.xml
@@ -8,19 +8,19 @@
     tools:context="com.google.firebase.samples.apps.mlkit.Login">
 
     <ImageView
-        android:id="@+id/elipse"
+        android:id="@+id/login_register_elipse"
         android:layout_width="3169dp"
         android:layout_height="1000dp"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_elipse"
+        android:src="@drawable/login_register_elipse"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_subtitle"
+        app:layout_constraintTop_toTopOf="@+id/login_welcome"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/et_email"
+        android:id="@+id/login_et_email"
         android:layout_width="290dp"
         android:layout_height="50dp"
         android:layout_centerVertical="true"
@@ -34,14 +34,14 @@
         android:textColor="@color/dark_blue"
         android:textColorHint="@color/dark_blue"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/et_password"
+        app:layout_constraintBottom_toTopOf="@+id/login_et_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
+        app:layout_constraintTop_toBottomOf="@id/login_welcome"
         app:layout_constraintVertical_bias="0.0" />
 
     <View
-        android:id="@+id/line_email"
+        android:id="@+id/login_line_email"
         android:layout_width="260dp"
         android:layout_height="1dp"
         android:layout_centerVertical="true"
@@ -49,11 +49,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_email"
+        app:layout_constraintTop_toBottomOf="@id/login_et_email"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/et_password"
+        android:id="@+id/login_et_password"
         android:layout_width="290dp"
         android:layout_height="50dp"
         android:layout_centerVertical="true"
@@ -67,13 +67,13 @@
         android:textColor="@color/dark_blue"
         android:textColorHint="@color/dark_blue"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_login"
+        app:layout_constraintBottom_toTopOf="@+id/login_btn_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_email" />
+        app:layout_constraintTop_toBottomOf="@id/login_et_email" />
 
     <View
-        android:id="@+id/line_password"
+        android:id="@+id/login_line_password"
         android:layout_width="260dp"
         android:layout_height="1dp"
         android:layout_centerVertical="true"
@@ -81,33 +81,33 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_password"
+        app:layout_constraintTop_toBottomOf="@id/login_et_password"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/login_btn_login"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:background="@drawable/btn_custom_login"
+        android:background="@drawable/login_btn_orange"
         android:fontFamily="@font/roboto_regular"
         android:text="@string/login"
         android:textColor="@color/dark_blue"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/swipeRight"
+        app:layout_constraintBottom_toTopOf="@+id/login_btn_register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_password" />
+        app:layout_constraintTop_toBottomOf="@id/login_et_password" />
 
     <Button
-        android:id="@+id/swipeRight"
+        android:id="@+id/login_btn_register"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginBottom="46dp"
-        android:background="@drawable/btn_custom"
+        android:background="@drawable/login_btn_darkblue"
         android:fontFamily="@font/roboto_regular"
         android:text="Register"
         android:textColor="@android:color/white"
@@ -115,11 +115,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+        app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />
 
 
     <ImageView
-        android:id="@+id/logo"
+        android:id="@+id/foodology_logo"
         android:layout_width="490dp"
         android:layout_height="100dp"
         android:layout_centerVertical="true"
@@ -133,7 +133,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/tv_subtitle"
+        android:id="@+id/login_welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -162,8 +162,8 @@
         android:textAllCaps="false"
         android:textColor="#8024415E"
         android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="@id/line_password"
-        app:layout_constraintTop_toBottomOf="@id/line_password" />
+        app:layout_constraintEnd_toEndOf="@id/login_line_password"
+        app:layout_constraintTop_toBottomOf="@id/login_line_password" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
