--- a/mlkit/app/src/main/res/layout/fragment_hardcode_recipe.xml
+++ b/mlkit/app/src/main/res/layout/fragment_hardcode_recipe.xml
@@ -9,15 +9,15 @@
     tools:context="com.google.firebase.samples.apps.mlkit.Register">
 
     <ImageView
-        android:id="@+id/ellipseOrange"
+        android:id="@+id/recipe_ellipseOrange"
         android:layout_width="1500dp"
         android:layout_height="1399dp"
         android:layout_centerVertical="true"
         android:layout_marginBottom="60dp"
-        android:background="@drawable/ic_ellipse_lightorange"
+        android:background="@drawable/recipe_ellipse_lightorange"
         app:layout_constrainedHeight="true"
         app:layout_constrainedWidth="true"
-        app:layout_constraintBottom_toBottomOf="@+id/charPng"
+        app:layout_constraintBottom_toBottomOf="@+id/recipe_charPng"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -25,12 +25,12 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
-        android:id="@+id/ellipseRecipe"
+        android:id="@+id/recipe_recipeTop"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_centerVertical="true"
         android:layout_marginTop="10dp"
-        android:background="@drawable/ic_recipe_ellipse"
+        android:background="@drawable/recipe_top"
         app:layout_constrainedHeight="true"
         app:layout_constrainedWidth="true"
         app:layout_constraintTop_toTopOf="parent"
@@ -40,12 +40,12 @@
         app:layout_constraintVertical_bias="1.0" />
 
         <ImageView
-        android:id="@+id/recipeDescription"
+        android:id="@+id/recipe_description"
         android:layout_width="match_parent"
         android:layout_height="380dp"
         android:layout_centerVertical="true"
         android:layout_marginBottom="50dp"
-        android:background="@drawable/ic_recipe_description"
+        android:background="@drawable/recipe_bottom"
         app:layout_constrainedHeight="true"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -55,7 +55,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <View
-        android:id="@+id/charPng"
+        android:id="@+id/recipe_charPng"
         android:layout_width="200dp"
         android:layout_height="130dp"
         android:layout_centerVertical="true"
@@ -79,7 +79,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/recipe_profile"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginLeft="20dp"
@@ -185,4 +185,4 @@
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
