--- a/mlkit/app/src/main/res/layout/fragment_recipe.xml
+++ b/mlkit/app/src/main/res/layout/fragment_recipe.xml
@@ -42,15 +42,15 @@
 
     <ImageView
         android:id="@+id/recipe_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="380dp"
+        android:layout_width="396dp"
+        android:layout_height="304dp"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="176dp"
         android:src="@drawable/recipe_bottom_pic"
         app:layout_constrainedHeight="true"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -121,25 +121,39 @@
 
     <Button
         android:id="@+id/btn_recipe"
-        android:layout_width="166dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="668dp"
-        android:backgroundTint="@android:color/transparent"
-        android:visibility="visible"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="220dp"
+        android:background="@drawable/btn_custom_recipe"
+        android:fontFamily="@font/roboto_regular"
+        android:text="See Full Recipe"
+        android:textColor="@color/light_orange"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.066"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/recipe_bottom"
+        app:layout_constraintVertical_bias="0.205" />
 
     <Button
         android:id="@+id/btn_cook"
-        android:layout_width="168dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="228dp"
-        android:layout_marginTop="668dp"
-        android:backgroundTint="@android:color/transparent"
-        android:visibility="visible"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="220dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/btn_custom_recipe"
+        android:fontFamily="@font/roboto_regular"
+        android:text="Start Cooking"
+        android:textColor="@android:color/black"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.891"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/recipe_bottom"
+        app:layout_constraintVertical_bias="0.205" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
