--- a/mlkit/app/src/main/res/drawable/ic_ellipse_orange.xml
+++ b/mlkit/app/src/main/res/drawable/ic_ellipse_orange.xml
@@ -1,10 +1,11 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="540dp"
-    android:height="400dp"
-    android:viewportWidth="540"
-    android:viewportHeight="400">
-  <path
-      android:pathData="M270,0c92.3,0 179.68,11.73 257.6,32.67L540,36.21V518.64H0V36.21l12.4,-3.54C90.32,11.73 177.7,0 270,0Z"
-      android:fillColor="@color/light_orange"
-      android:fillType="evenOdd"/>
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="3169dp"
+    android:height="1399dp"
+    android:viewportWidth="3169"
+    android:viewportHeight="1399">
+
+    <path
+        android:pathData="M3169 699.5C3169 1085.82 2459.6 1399 1584.5 1399C709.405 1399 0 1085.82 0 699.5C0 313.177 709.405 0 1584.5 0C2459.6 0 3169 313.177 3169 699.5Z"
+        android:fillColor="#E48E71"/>
 </vector>
