--- a/mlkit/app/src/main/res/layout/fragment_lams3.xml
+++ b/mlkit/app/src/main/res/layout/fragment_lams3.xml
@@ -175,12 +175,101 @@
         android:layout_width="413dp"
         android:layout_height="45dp"
         android:layout_marginBottom="35dp"
-        android:background="@drawable/ic_lams_progress_bar"
+        android:background="@drawable/ic_lams_progress_bar_2"
         app:layout_constraintBottom_toTopOf="@id/bottom_base"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/prepSoyaProgressBar_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="5dp"
+        android:fontFamily="@font/roboto_regular"
+        android:gravity="center_horizontal|top"
+        android:text="Step 3:"
+        android:textColor="@color/dark_blue"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar3" />
+
+    <TextView
+        android:id="@+id/prepSoyaProgressBar_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:fontFamily="@font/roboto_regular"
+        android:gravity="center_horizontal|top"
+        android:text="Put In Ingredients"
+        android:textColor="@color/dark_blue"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/prepSoyaProgressBar_1" />
+
+    <TextView
+        android:id="@+id/prepRiceProgressBar_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="100dp"
+        android:fontFamily="@font/roboto_regular"
+        android:gravity="center_horizontal|top"
+        android:text="Step 2:"
+        android:textColor="@color/dark_blue"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/prepSoyaProgressBar_1"
+        app:layout_constraintEnd_toStartOf="@+id/prepSoyaProgressBar_1"
+        app:layout_constraintTop_toTopOf="@+id/prepSoyaProgressBar_1" />
+
+    <TextView
+        android:id="@+id/prepRiceProgressBar_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:fontFamily="@font/roboto_regular"
+        android:gravity="center_horizontal|top"
+        android:text="Preheat The Pan"
+        android:textColor="@color/dark_blue"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/prepRiceProgressBar_1"
+        app:layout_constraintStart_toStartOf="@+id/prepRiceProgressBar_1"
+        app:layout_constraintTop_toBottomOf="@id/prepRiceProgressBar_1" />
+
+    <TextView
+        android:id="@+id/prepOilProgressBar_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="100dp"
+        android:fontFamily="@font/roboto_regular"
+        android:gravity="center_horizontal|top"
+        android:text="Step 4:"
+        android:textColor="@color/dark_blue"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@+id/prepSoyaProgressBar_1"
+        app:layout_constraintTop_toTopOf="@+id/prepSoyaProgressBar_1" />
+
+    <TextView
+        android:id="@+id/prepOilProgressBar_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:fontFamily="@font/roboto_regular"
+        android:gravity="center_horizontal|top"
+        android:text="Serve"
+        android:textColor="@color/dark_blue"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_base"
+        app:layout_constraintEnd_toEndOf="@+id/prepOilProgressBar_1"
+        app:layout_constraintStart_toStartOf="@+id/prepOilProgressBar_1"
+        app:layout_constraintTop_toBottomOf="@id/prepRiceProgressBar_1"
+        app:layout_constraintVertical_bias="0.0" />
 
     <!--bottom dock base-->
     <ImageView
@@ -196,119 +285,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
-        android:id="@+id/prepSoyaProgressBar_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="45dp"
-        android:layout_marginBottom="104dp"
-        android:fontFamily="@font/roboto_regular"
-        android:gravity="center_horizontal|top"
-        android:text="Step 3:"
-        android:textColor="@color/dark_blue"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/progressBar3"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/prepSoyaProgressBar_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="3dp"
-        android:fontFamily="@font/roboto_regular"
-        android:gravity="center_horizontal|top"
-        android:text="Put In Ingredients"
-        android:textColor="@color/dark_blue"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_base"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/prepSoyaProgressBar_1" />
-
-    <TextView
-        android:id="@+id/prepRiceProgressBar_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginBottom="104dp"
-        android:fontFamily="@font/roboto_regular"
-        android:gravity="center_horizontal|top"
-        android:text="Step 2:"
-        android:textColor="@color/dark_blue"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/prepSoyaProgressBar_1"
-        app:layout_constraintHorizontal_bias="0.467"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/progressBar3"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/prepRiceProgressBar_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="53dp"
-        android:layout_marginBottom="3dp"
-        android:fontFamily="@font/roboto_regular"
-        android:gravity="center_horizontal|top"
-        android:text="Preheat The Pan"
-        android:textColor="@color/dark_blue"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_base"
-        app:layout_constraintEnd_toStartOf="@+id/prepSoyaProgressBar_1"
-        app:layout_constraintHorizontal_bias="0.447"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/prepRiceProgressBar_1" />
-
     <!--dock scan-->
-
-    <TextView
-        android:id="@+id/prepOilProgressBar_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="53dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="11dp"
-        android:fontFamily="@font/roboto_regular"
-        android:gravity="center_horizontal|top"
-        android:text="Step 4:"
-        android:textColor="@color/dark_blue"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/prepOilProgressBar_2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
-        app:layout_constraintStart_toEndOf="@+id/prepSoyaProgressBar_1"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar3"
-        app:layout_constraintVertical_bias="0.437" />
-
-    <TextView
-        android:id="@+id/prepOilProgressBar_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="53dp"
-        android:fontFamily="@font/roboto_regular"
-        android:gravity="center_horizontal|top"
-        android:text="Serve"
-        android:textColor="@color/dark_blue"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_base"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/prepSoyaProgressBar_1"
-        app:layout_constraintTop_toBottomOf="@id/prepRiceProgressBar_1"
-        app:layout_constraintVertical_bias="1.0" />
-
     <Button
         android:id="@+id/scan_button"
         android:layout_width="35dp"
@@ -367,31 +344,23 @@
 
     <Button
         android:id="@+id/next"
-        android:layout_width="121dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="112dp"
-        android:background="@drawable/btn_custom_recipe"
-        android:fontFamily="@font/roboto_regular"
-        android:text="Next"
-        android:textColor="@color/light_orange"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="78dp"
+        android:layout_height="71dp"
+        android:layout_marginStart="100dp"
+        android:background="@drawable/ic_arrow_left"
+        android:rotation="180"
+        app:layout_constraintBottom_toBottomOf="@+id/recipeVideo"
+        app:layout_constraintStart_toEndOf="@+id/play_button"
+        app:layout_constraintTop_toTopOf="@+id/recipeVideo" />
 
     <Button
         android:id="@+id/previous"
-        android:layout_width="121dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="112dp"
-        android:background="@drawable/btn_custom_recipe"
-        android:fontFamily="@font/roboto_regular"
-        android:text="Previous"
-        android:textColor="@color/light_orange"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toStartOf="@+id/next"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:layout_width="78dp"
+        android:layout_height="71dp"
+        android:layout_marginEnd="100dp"
+        android:background="@drawable/ic_arrow_left"
+        app:layout_constraintBottom_toBottomOf="@+id/recipeVideo"
+        app:layout_constraintEnd_toStartOf="@+id/play_button"
+        app:layout_constraintTop_toTopOf="@+id/recipeVideo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
