--- a/mlkit/app/src/main/res/layout/fragment_login.xml
+++ b/mlkit/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/relativeLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.google.firebase.samples.apps.mlkit.Login">
+    tools:context="com.google.firebase.samples.apps.foodology.Login">
 
     <ImageView
         android:id="@+id/login_register_elipse"
