--- a/mlkit/app/src/main/res/layout/fragment_profile.xml
+++ b/mlkit/app/src/main/res/layout/fragment_profile.xml
@@ -5,7 +5,7 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.google.firebase.samples.apps.mlkit.ProfileActivity">
+    tools:context="com.google.firebase.samples.apps.foodology.ProfileActivity">
 
     <View
         android:id="@+id/ellipseDarkBlue"
