--- a/mlkit/app/src/main/res/layout/activity_still_image.xml
+++ b/mlkit/app/src/main/res/layout/activity_still_image.xml
@@ -38,7 +38,7 @@
   </ImageView>
 
 
-  <com.google.firebase.samples.apps.mlkit.common.GraphicOverlay
+  <com.google.firebase.samples.apps.foodology.common.GraphicOverlay
       android:id="@+id/previewOverlay"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
