--- a/mlkit/app/src/main/res/layout/home_page.xml
+++ b/mlkit/app/src/main/res/layout/home_page.xml
@@ -5,7 +5,7 @@
     android:id="@+id/relativeLayout4"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.google.firebase.samples.apps.mlkit.MainActivity">
+    tools:context="com.google.firebase.samples.apps.foodology.MainActivity">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
